fwde-linux/scripts/debug outputs/dba260630.txt
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ ^[[200~
: command not found
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ # Navigate to the scripts dir (path will look something like this)
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ cd /media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ 
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ # Full first-run (installs deps, builds, runs replay test)
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ bash first-run.sh
[fwde-linux] Starting first-run flow (debug)
[fwde-linux] Installing Debian build dependencies
[sudo] password for Flalaski: 

Sorry, try again.
[sudo] password for Flalaski: 
3Sorry, try again.
[sudo] password for Flalaski:       
Hit:1 http://deb.debian.org/debian bookworm-updates InRelease
Hit:2 http://la.mxrepo.com/mx/repo bookworm InRelease                                                        
Ign:3 https://repo.vivaldi.com/stable/deb stable InRelease                                                   
Hit:4 http://dl.google.com/linux/earth/deb stable InRelease                                                  
Hit:5 http://deb.debian.org/debian bookworm InRelease                                                        
Hit:6 https://packages.microsoft.com/repos/edge-stable stable InRelease                                      
Hit:7 http://security.debian.org/debian-security bookworm-security InRelease                                 
Hit:8 https://repo.vivaldi.com/stable/deb stable Release            
Hit:9 https://deb.opera.com/opera-stable stable InRelease
Reading package lists... Done
Reading package lists... Done
Building dependency tree... Done
Reading state information... Done
build-essential is already the newest version (12.9).
pkg-config is already the newest version (1.8.1-1).
curl is already the newest version (7.88.1-10+deb12u14).
ca-certificates is already the newest version (20230311+deb12u1).
git is already the newest version (1:2.39.5-0+deb12u3).
libx11-dev is already the newest version (2:1.8.4-2+deb12u2).
libxrandr-dev is already the newest version (2:1.5.2-2+b1).
libxinerama-dev is already the newest version (2:1.1.4-3).
libxext-dev is already the newest version (2:1.3.4-1+b1).
libxi-dev is already the newest version (2:1.8-1+b1).
libxcb1-dev is already the newest version (1.15-1).
jq is already the newest version (1.6-2.1+deb12u1).
shellcheck is already the newest version (0.9.0-1).
The following package was automatically installed and is no longer required:
  lsscsi
Use 'sudo apt autoremove' to remove it.
0 upgraded, 0 newly installed, 0 to remove and 11 not upgraded.
[fwde-linux] Ensuring requested Rust components are installed
info: component rustfmt is up to date
info: component clippy is up to date
[fwde-linux] Prefetching Cargo dependencies
    Updating crates.io index
     Locking 2 packages to latest compatible versions
 Downgrading thiserror v2.0.18 -> v1.0.69 (available: v2.0.18)
 Downgrading thiserror-impl v2.0.18 -> v1.0.69
  Downloaded thiserror v1.0.69
  Downloaded thiserror-impl v1.0.69
  Downloaded 2 crates (39.6KiB) in 0.22s
[fwde-linux] Toolchain versions
rustc 1.96.1 (31fca3adb 2026-06-26)
cargo 1.96.1 (356927216 2026-06-26)
[fwde-linux] Bootstrap complete at /media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux
[fwde-linux] Formatting workspace
[fwde-linux] Checking workspace
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling quote v1.0.46
   Compiling serde_core v1.0.228
   Compiling zmij v1.0.21
   Compiling serde v1.0.228
    Checking once_cell v1.21.4
   Compiling thiserror v1.0.69
   Compiling serde_json v1.0.150
    Checking regex-syntax v0.8.11
   Compiling anyhow v1.0.103
    Checking itoa v1.0.18
    Checking memchr v2.8.2
    Checking cfg-if v1.0.4
    Checking pin-project-lite v0.2.17
    Checking lazy_static v1.5.0
    Checking log v0.4.33
    Checking thread_local v1.1.9
    Checking sharded-slab v0.1.7
    Checking smallvec v1.15.2
    Checking nu-ansi-term v0.50.3
    Checking tracing-core v0.1.36
    Checking tracing-log v0.2.0
    Checking regex-automata v0.4.14
   Compiling syn v2.0.118
    Checking matchers v0.2.0
   Compiling thiserror-impl v1.0.69
   Compiling serde_derive v1.0.228
   Compiling tracing-attributes v0.1.31
    Checking tracing v0.1.44
    Checking tracing-subscriber v0.3.23
    Checking fwde-core v0.1.0 (/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/crates/fwde-core)
warning: unused import: `is_window_floating`
 --> crates/fwde-core/src/legacy_runtime.rs:9:9
  |
9 |         is_window_floating, lerp,
  |         ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0689]: can't call method `floor` on ambiguous numeric type `{float}`
   --> crates/fwde-core/src/legacy_rules.rs:417:60
    |
417 |                 let spiral_angles = (spiral_radius / 25.0).floor().max(8.0) as u32;
    |                                                            ^^^^^

error[E0609]: no field `is_tool_window` on type `&LegacyManagedWindow`
  --> crates/fwde-core/src/legacy_runtime.rs:58:19
   |
58 |         && window.is_tool_window
   |                   ^^^^^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
58 -         && window.is_tool_window
58 +         && window.tool_window
   |

error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as mutable
   --> crates/fwde-core/src/legacy_engine.rs:119:16
    |
118 |         for window in &mut self.state.windows {
    |                       -----------------------
    |                       |
    |                       mutable borrow occurs here
    |                       mutable borrow later used here
119 |             if self.is_window_protected(window, 0, false) {
    |                ^^^^ immutable borrow occurs here

error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as mutable
   --> crates/fwde-core/src/legacy_engine.rs:123:28
    |
118 |         for window in &mut self.state.windows {
    |                       -----------------------
    |                       |
    |                       mutable borrow occurs here
    |                       mutable borrow later used here
...
123 |             let alpha = if self.is_electron_app(window) {
    |                            ^^^^ immutable borrow occurs here

Some errors have detailed explanations: E0502, E0609, E0689.
For more information about an error, try `rustc --explain E0502`.
warning: `fwde-core` (lib) generated 1 warning
error: could not compile `fwde-core` (lib) due to 4 previous errors; 1 warning emitted
Flalaski@mxcfmg37:/media/Bountiful/Coding/FWDE/FWDE-1/fwde-linux/scripts
$ 
